devops/misc/frontend-sample-1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-sample-1-deployment
  labels:
    app: front-end-sample-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-end-sample-1
  template:
    metadata:
      labels:
        app: front-end-sample-1
    spec:
      containers:
      - name: front-end-sample-1
        image: chenfei1987/front-end-sample-1:v3
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-sample-1-service
spec:
  selector:
    app: front-end-sample-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
