devops/misc/ingress-front-end.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-front-end
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: front-end-sample-1-service
              port:
                number: 80
